k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        tier: backend
        track: stable
    spec:      
      containers:
        - name: backend
          image: "kalmastenitin/fastapi-backend-service:latest"
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - mountPath: /home/diycam/workspace
              name: workspace-volume
      volumes:
        - name: workspace-volume
          persistentVolumeClaim:
            claimName: workspace-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
    tier: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http
